# funcpro-mini-project

./: .gitignore  CHANGELOG.md  README.md  funcpro-mini-project.cabal  itemDB.csv  transDB.csv
.stack-work/: stack.sqlite3
src/: Main.hs
src/CustomData/: Doc.md  FileNames.hs  Formats.hs  Matchings.hs  Types.hs  Updates.hs
src/Data/: Types.hs  Updates.hs
src/Data/Types/: Item.hs  Stock.hs  Transaction.hs
src/IO/: CLUI.hs  CSVHandler.hs  Doc.md
src/Tests/: CSVHandlerTest.hs  CustomDataTest.hs  UpdateTest.hs
tests/: Main.hs
tests/CustomTests/: CSVHandlerTest.hs  TypeTest.hs  UpdateTest.hs
