cabal-version:       2.2

name:                funcpro-mini-project
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/funcpro-mini-project#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2025 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable funcpro-mini-project
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       CustomData.FileNames
                       CustomData.Types
                       CustomData.Updates
                       IO.CSVHandler
                       Tests.CSVHandlerTest
                       Tests.CustomDataTest
                       Tests.UpdateTest
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       deepseq,
                       time
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

source-repository head
  type:     git
  location: https://github.com/githubuser/funcpro-mini-project
