cabal-version:       2.2

name:                funcpro-mini-project
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/funcpro-mini-project#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2025 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

library
  hs-source-dirs: src
  exposed-modules:
      CustomData.FileNames
      CustomData.Formats
      CustomData.Matchings
      CustomData.Types
      CustomData.Updates
      IO.CLUI
      IO.CSVHandler
  default-language: Haskell2010
  build-depends:
      base >=4.7 && <5,
      deepseq,
      time

executable funcpro-mini-project
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       CustomData.FileNames
                       CustomData.Formats
                       CustomData.Matchings
                       CustomData.Types
                       CustomData.Updates
                       IO.CLUI
                       IO.CSVHandler
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       funcpro-mini-project,
                       deepseq,
                       time
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

test-suite funcpro-tests
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
  other-modules:
      CustomTests.CSVHandlerTest
      CustomTests.TypeTest
      CustomTests.UpdateTest
  default-language: Haskell2010
  build-depends:
      base >=4.7 && <5,
      funcpro-mini-project,
      tasty,
      tasty-hunit,
      tasty-quickcheck,
      time
  ghc-options: -Wall

source-repository head
  type:     git
  location: https://github.com/githubuser/funcpro-mini-project
